Logos almost done, just need to fix the spacing

--- a/photography-portfolio/src/index.css
+++ b/photography-portfolio/src/index.css
@@ -358,3 +358,16 @@ ul {
   margin-top: 15px;
   margin-left: -40px;
 }
+
+.MMMLogo {
+  width: 220px;
+  height: 70px;
+  margin-top: 15px;
+}
+
+.zcreativeLogo {
+  height: 68px;
+  width: 250px;
+  margin-left: 50px;
+  margin-top: 20px;
+}
